[package]
name = "didkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2.0"
base64 = "0.13.0"
bs58 = "0.4.0"
ed25519-dalek = "1.0.1"
json-patch = "1.0.0"
secp256k1 = {version = "0.27.0",  features = ["rand", "rand-std"]}
serde = "1.0.160"
serde_json = "1.0.96"
thiserror = "1.0.40"
